guess submission and coloring for correct, wrong position, wrong

--- a/style.css
+++ b/style.css
@@ -70,6 +70,10 @@ body {
     background-color: hsl(115, 29%, 43%);
 }
 
+.shake {
+    color: orange;
+}
+
 #keyboard {
     display: grid;
     grid-template-columns: repeat(20, minmax(auto, 1.25em));
